Fix horizontal scroll on Win

--- a/components/blog/fullpage.module.scss
+++ b/components/blog/fullpage.module.scss
@@ -1,11 +1,16 @@
 @import "../../styles/mixins";
 
 .full {
+  --scrollbar-width: 9px;
   margin-left: calc(var(--content-spacing) * -1);
   margin-right: calc(var(--content-spacing) * -1);
 
   @include breakpoint(md) {
-    margin-left: calc((100vw - var(--content-width)) / 2 * -1 + 8px);
-    margin-right: calc((100vw - var(--content-width)) / 2 * -1 + 8px);
+    margin-left: calc(
+      (100vw - var(--content-width)) / 2 * -1 + var(--scrollbar-width)
+    );
+    margin-right: calc(
+      (100vw - var(--content-width)) / 2 * -1 + var(--scrollbar-width)
+    );
   }
 }
